--- a/package.json
+++ b/package.json
@@ -40,38 +40,12 @@
   },
   "homepage": "https://github.com/nolanlawson/cordova-plugin-sqlite-2#readme",
   "devDependencies": {
-    "appium": "1.10.1",
-    "bluebird": "3.3.4",
-    "browserify": "13.0.0",
-    "chai": "3.5.0",
-    "chai-as-promised": "5.3.0",
-    "colors": "1.1.2",
-    "cordova": "7.1.0",
-    "denodeify": "1.2.1",
-    "eslint": "2.7.0",
-    "js-extend": "1.0.1",
-    "lodash.find": "4.2.0",
     "mkdirp": "0.5.1",
-    "phantomjs-prebuilt": "2.1.7",
-    "pouchdb-ajax": "5.4.4",
-    "pouchdb-binary-utils": "5.4.4",
-    "pouchdb-browser": "5.4.4",
-    "pouchdb-errors": "5.4.4",
-    "pouchdb-utils": "5.4.4",
-    "replace": "0.3.0",
-    "request-promise": "2.0.1",
     "rimraf": "2.5.2",
     "rollup": "0.59.2",
     "rollup-plugin-commonjs": "9.1.3",
     "rollup-plugin-node-resolve": "3.3.0",
-    "sauce-connect-launcher": "1.2.4",
-    "stream-to-promise": "1.1.0",
-    "tape": "4.5.1",
-    "ua-parser-js": "0.7.10",
-    "uuid": "2.0.1",
-    "wd": "1.7.0",
-    "websql": "2.0.3",
-    "zuul": "3.11.1"
+    "websql": "2.0.3"
   },
   "files": [
     "src/android",
